# Fake_SSH_Play

./: .gitignore  Cargo.toml  README.md  mp4_to_txt.py
Src/: dashboard.html  main.rs
Src/Control/: ssh.rs  web.rs
Src/Read/: config.rs  frames.rs  state.rs
Src/Tools/: geoip.rs
old-js/: README.md  app.js  badapple.txt  example.js  package-lock.json  package.json  test_audio_client.js
